<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Generic items -->
    <string name="generic_bt_ok">OK</string>
    <string name="generic_bt_cancel">キャンセル</string>
    <string name="generic_tv_confirm">確認</string>
    <string name="generic_tv_menu">メニュー</string>
    <string name="generic_tv_register">登録</string>
    <string name="generic_tv_edit">編集</string>
    <string name="generic_tv_delete">削除</string>
    <string name="generic_tv_upload">Upload</string>
    <string name="hello">Hello World, IFM9Activity!</string>
    <string name="app_name">IFM9</string>
    <string name="v1_tv_dir_path">Directory path</string>

    <!-- main_menu.xml -->
    <string name="main_opt_menu_create_folder">フォルダ作成</string>
    <string name="main_opt_menu_refresh_db">DBリフレッシュ</string>
    <string name="main_opt_menu_db_activity">データベース</string>
    <string name="main_opt_menu_search">探す</string>
    <string name="main_opt_menu_preferences">カスタマイズ</string>
    <string name="main_opt_menu_history">閲覧履歴</string>
    <string name="main_opt_menu_ftp">FTP</string>

    <!-- preferences.xml -->
    <string name="prefs_shared_prefs_name">IFM9_prefs</string>
    <string name="prefs_db_refresh_key">db_refresh</string>
    <string name="prefs_db_refresh_title">DBリフレッシュを、毎回行う</string>
    
    <string name="prefs_finger_paint_key">finger_paint</string>
    <string name="prefs_finger_paint_title">FPActvを使う</string>

    <string name="prefs_history_size_key">history_size</string>
    <string name="prefs_history_size_title">History size</string>
    
    <!-- Dialogues ================================ -->
    <!-- dlg_create_folder.xml -->
    <string name="dlg_create_folder_title">フォルダ作成</string>
    <string name="dlg_create_folder_tv_message">フォルダ名を入れてください</string>
    <string name="dlg_create_folder_tv_folder_set">フォルダセットの作成</string>

    <!-- dlg_input_empty.xml -->
    <string name="dlg_input_empty_title">注意！</string>
    <string name="dlg_input_empty_message">入力がありません</string>
    <string name="dlg_input_empty_reenter">もう一度入力</string>
    <string name="dlg_input_empty_cancel">取りやめ</string>

    <!-- dlg_confirm_create_folder.xml -->
    <string name="dlg_confirm_create_folder_tv_message">このフォルダを作りますか？</string>

    <!-- dlg_confirm_remove_folder.xml -->
    <string name="dlg_confirm_remove_folder_tv_message">このフォルダを削除しますか？</string>

    <!-- db_manager.xml -->
    <string name="db_manager_btn_create_table">テーブル作成</string>
    <string name="db_manager_btn_drop_table">テーブル削除</string>
    <string name="db_manager_btn_register_patterns">定型句登録</string>

    <!-- dlg_drop_table.xml -->
    <string name="dlg_drop_table_title">テーブル削除</string>

    <!-- dlg_confirm_drop_table.xml -->
    <string name="dlg_confirm_drop_table_tv_message_drop">このテーブルを削除しますか？</string>

    <!-- image_actv_menu.xml -->
    <string name="image_actv_menu_add_memo">メモ</string>
    <string name="image_actv_menu_add_patterns">定型句登録</string>

    <!-- dlg_add_memos.xml -->
    <string name="dlg_add_memos_tv_title">メモ</string>
    <string name="dlg_add_memos_bt_patterns">定型</string>

    <!-- thumb_actv_menu.xml -->
    <string name="thumb_actv_menu_move_mode">移動モード</string>
    <string name="thumb_actv_menu_move_files">移動</string>

    <!-- dlg_confirm_move_files.xml -->
    <string name="dlg_confirm_move_files_tv_message">このフォルダへ移しますか？</string>

    <!-- dlg_item_menu.xml -->
    <string name="dlg_item_menu_item_edit_memo">メモ編集</string>
    <string name="dlg_item_menu_item_delete">削除</string>
    <string name="dlg_item_menu_item_move">移動</string>

    <!-- dlg_create_table.xml -->
    <string name="dlg_create_table_title">テーブル作成</string>
    <string name="dlg_create_table_label_column_name">カラム名</string>
    <string name="dlg_create_table_label_data_type">データ・タイプ</string>
    <string name="dlg_create_table_label_table_name">テーブル名</string>

    <!-- dlg_memo_patterns.xml -->
    <string name="dlg_memo_patterns_title">定型</string>

    <!-- dlg_register_patterns.xml -->
    <string name="dlg_register_patterns_title">定型句登録</string>
    <string name="dlg_register_patterns_tv_word">語句</string>
    <string name="dlg_register_patterns_tv_table_name">テーブル名</string>

    <!-- dlg_search.xml -->
    <string name="dlg_search_title">サーチ</string>
    <string name="dlg_search_tv_message">サーチする語句を入れてください（複数の場合、スペースで区切ります）</string>
    <string name="dlg_search_message_all_table">全テーブル検索</string>

    <!-- dlg_db_admin.xml -->
    <string name="dlg_db_admin_title">DB Admin</string>
    <string name="dlg_db_admin_item_backup_db">Backup DB</string>
    <string name="dlg_db_admin_item_refresh_db">DBリフレッシュ</string>
    <string name="dlg_db_admin_item_set_new_column">Set new column</string>
    <string name="dlg_db_admin_item_restore_db">Restore db</string>
    <string name="dlg_db_admin_item_upload_db">Upload db</string>

    <!-- dlg_delete_patterns.xml -->
    <string name="dlg_delete_patterns_title">定型句　削除</string>

    <!-- dlg_confirm_delete_patterns.xml -->
    <string name="dlg_confirm_delete_patterns_message">この定型句を削除しますか？</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_fpactv">FPActv</string>

    <!-- dlg_edit_ti.xml -->
    	<string name="dlg_edit_ti_title">Edit item</string>
    	<string name="dlg_edit_ti_tv_file_name">File name</string>
    	<string name="dlg_edit_ti_tv_file_path">File path</string>
    	<string name="dlg_edit_ti_tv_memos">Memos</string>
    	
    <!-- FTP -->

    	<string name="ftp_lollipop">lollipop</string>
    	<string name="ftp_upload_db_file">upload_db_file</string>
    <!-- HTTP -->
    	<string name="http_post_file_name_lollipop">http_post_file_name_lollipop</string>
    	<string name="http_post_image_data_rails">http_post_image_data_rails</string>
    	
</resources>